@@ -1,3 +1,10 @@
+<b>2009-07-18</b>
+
+* Airline maps default to direct only, codeshares can be enabled in filter
+* Non-IATA airlines/airports now filtered out from quicksearch
+* Inactive airlines now filtered out from quicksearch
+* No map resizing when routemap airline filter is changed
+
 <b>2009-07-17</b>
 
 * Lithuanian updated
